single blog post styles
Former-commit-id: 8840ff2383172bf564cac28e2b0061c89431eeda
Former-commit-id: 0725a7f36b0ef737c5a7d663d129ede1c2d5d3ea
Former-commit-id: ea9d4ce3a481d5d0ea3410b3deca91914f15914c
Former-commit-id: 00992c3702ff1f9473421db319dec28d72f46f97
Former-commit-id: 538257559226d497348f534934da8b5fbc1674a3
Former-commit-id: 5435553d4ea1f1d850a193f554610886a9e88564

--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -178,12 +178,27 @@ h1.article-template__title {
   text-transform: none;
 }
 
-.article-template__content h2 {
+.article-template__content h2, .article-template__content h3, .article-template__content h4, .article-template__content h5 {
   text-align: left;
+  text-transform: none;
+  margin: .5em 0;
 }
 
 .article-template__content figcaption {
   font-size: 14px;
   color: #ddd;
   font-style: italic;
+}
+
+.article-template__content sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline;
+  top: -.6em;
+  font-size: 10px;
+}
+
+.article-template__content sup a {
+  text-decoration: none;
 }
