making header h1 text-transform uppercase

--- a/sections/home-template.liquid
+++ b/sections/home-template.liquid
@@ -12,9 +12,9 @@
         <p class="header-video-subtitle header-one header-slide">Rejuvenate at the cellular level</p>
         
         <h1 class="header-slide tlt">
-            <span class="header-one">Experience</span><br />
-            <span class="header-two">Full Spectrum</span><br/>
-            <span class="header-two">Infrared Therapy</span>
+            <span class="header-one text-uppercase">Experience</span><br />
+            <span class="header-two text-uppercase">Full Spectrum</span><br/>
+            <span class="header-two text-uppercase">Infrared Therapy</span>
         </h1>
         <div class="video-links">
             <a href="/products?filter=all" class="btn btn-outline btn-shop header-slide">Shop Now</a><br />
