blog post category links
Former-commit-id: 78b734455f7fddca2fe45faa0f183fcd94ac1417
Former-commit-id: 7624fb7659f1885e869ea9dd135360bd092b69cd

--- a/assets/base.css
+++ b/assets/base.css
@@ -905,6 +905,10 @@ summary::-webkit-details-marker {
 	list-style-type: none;
 }
 
+.text-uppercase {
+    text-transform: uppercase;
+}
+
 @media screen and (min-width: 750px) {
   .grid {
     column-gap: var(--grid-desktop-horizontal-spacing);
