--- a/assets/component-pagination.css
+++ b/assets/component-pagination.css
@@ -17,6 +17,7 @@
 .pagination__list > li {
   flex: 1 0 4.4rem;
   max-width: 4.4rem;
+  list-style-type: none;
 }
 
 .pagination__list > li:not(:last-child) {
