post category urls
Former-commit-id: b1344174927b0f4811330655abe2bc1c9b8e0182
Former-commit-id: c44ff70b2cb3604d03d69615890ad1af38b3212d

--- a/snippets/article-card.liquid
+++ b/snippets/article-card.liquid
@@ -38,7 +38,7 @@
         <div class="card__information">
           <div class="text-center ">
               {%- for tag in article.tags -%}
-                <a href="/tagged/{{ tag | handle }}" class="tag-article ">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+                <a href="/blogs/wavelength/tagged/{{ tag | handle }}" class="tag-article ">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
               {%- endfor -%}
           </div> 
           <h3 class="card__heading{% if show_excerpt %} h2{% endif %}" style="margin-top: 2rem;" class="underline-links-hover">
