--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -20,7 +20,7 @@
   <div class="container">
 
       <div class="navbar-center-wrapper">
-      <div class="navbar-collapse collapse"><ul id="menu-header-menu-1" class="nav"><li id="mgt-menu-item-613" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="What’s New" href="/blogs/wavelength/tagged/whats-new">What’s New</a></li><li id="mgt-menu-item-612" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Sauna Science" href="/blogs/wavelength/tagged/sauna-science/">Sauna Science</a></li><li id="mgt-menu-item-472" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Products" href="/blogs/wavelength/tagged/products/">Products</a></li><li id="mgt-menu-item-611" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Lifestyle" href="/blogs/wavelength/tagged/lifestyle/">Lifestyle</a></li></ul></div>                  </div>
+      <div class="navbar-collapse collapse"><ul id="menu-header-menu-1" class="nav"><li id="mgt-menu-item-613" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Home" href="/blogs/wavelength/">Home</a></li><li id="mgt-menu-item-613" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="What’s New" href="/blogs/wavelength/tagged/whats-new">What’s New</a></li><li id="mgt-menu-item-612" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Sauna Science" href="/blogs/wavelength/tagged/sauna-science/">Sauna Science</a></li><li id="mgt-menu-item-472" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Products" href="/blogs/wavelength/tagged/products/">Products</a></li><li id="mgt-menu-item-611" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Lifestyle" href="/blogs/wavelength/tagged/lifestyle/">Lifestyle</a></li></ul></div>                  </div>
 
   </div>
 </div>
@@ -33,7 +33,7 @@
 
 </div>
 
-{%- paginate blog.articles by 6 -%}
+{%- paginate blog.articles by 7 -%}
   <div class="main-blog page-width section-{{ section.id }}-padding">
     <div class="blog-articles {% if section.settings.layout == 'collage' %}blog-articles--collage{% endif %}">
       {%- for article in blog.articles -%}
