--- a/snippets/article-card.liquid
+++ b/snippets/article-card.liquid
@@ -34,34 +34,7 @@
       style="--ratio-percent: {{ 1 | divided_by: ratio | times: 100 }}%;"
     >
       
-      <div class="card__content">
-        <div class="card__information">
-          <div class="text-center ">
-              {%- for tag in article.tags -%}
-                <a href="/blogs/wavelength/tagged/{{ tag | handle }}" class="tag-article ">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
-              {%- endfor -%}
-          </div> 
-          <h3 class="card__heading{% if show_excerpt %} h2{% endif %}" style="margin-top: 2rem;" class="underline-links-hover">
-            <a href="{{ article.url }}" class="full-unstyled-link">
-              {{ article.title | escape }}
-            </a>
-          </h3>
-          <div class="article-card__info caption-with-letter-spacing h5">
-            {%- if show_date -%}
-              <span class="circle-divider">{{ article.published_at | time_tag: format: 'date' }}</span>
-            {%- endif -%}
-            {%- if show_author -%}
-              <span>{{ article.author }}</span>
-            {%- endif -%}
-          </div>
-          
-        </div>
-        {%- if show_badge -%}
-          <div class="card__badge {{ settings.badge_position }}">
-            <span class="badge color-background-1">{{ 'blogs.article.blog' | t }}</span>
-          </div>
-        {%- endif -%}  
-      </div>
+      
       <div class="card__inner {% if settings.blog_card_style == 'standard' %} color-{{ settings.blog_card_color_scheme }} gradient{% endif %}{% if article.image and show_image or settings.blog_card_style == 'standard' %} ratio{% endif %}" style="--ratio-percent: {{ 1 | divided_by: ratio | times: 100 }}%;">
         {%- if show_image == true and article.image -%}
           <div class="article-card__image-wrapper card__media">
@@ -127,22 +100,25 @@
           {%- endif -%}
         </div>
       </div>
-      {%- if show_excerpt -%}
-        {%- if article.excerpt.size > 0 or article.content.size > 0 -%}
-          <p class="article-card__excerpt rte-width">
-            {%- if article.excerpt.size > 0 -%}
-              {{ article.excerpt | strip_html }}
-            {%- else -%}
-              {{ article.content | strip_html | truncatewords: 30 }}
-            {%- endif -%}
-          </p>
-        {%- endif -%}
-        <div class="article-card__footer">
-          {%- if article.comments_count > 0 and blog.comments_enabled? -%}
-            <span>{{ 'blogs.article.comments' | t: count: article.comments_count }}</span>
-          {%- endif -%}
+      <div class="card__content">
+        <div class="card__information">
+          <div class="">
+              {%- for tag in article.tags -%}
+                <a href="/blogs/wavelength/tagged/{{ tag | handle }}" class="tag-article ">{{ tag }}</a>{% unless forloop.last %}, {% endunless %}
+              {%- endfor -%}
+          </div> 
+          <h3 class="card__heading{% if show_excerpt %} h2{% endif %}" style="margin-top: 2rem;" class="underline-links-hover">
+            <a href="{{ article.url }}" class="full-unstyled-link">
+              {{ article.title | escape }}
+            </a>
+          </h3>
         </div>
-      {%- endif -%}
+        {%- if show_badge -%}
+          <div class="card__badge {{ settings.badge_position }}">
+            <span class="badge color-background-1">{{ 'blogs.article.blog' | t }}</span>
+          </div>
+        {%- endif -%}  
+      </div>
     </div>
   </div>
 {%- endif -%}
