single blog post style updates
Former-commit-id: 702bdf0581c4069fd1871367f9e0a92191a8ca92
Former-commit-id: 2ebcc30cf7d4317571148147e4ccd61795654d51

--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -202,3 +202,7 @@ h1.article-template__title {
 .article-template__content sup a {
   text-decoration: none;
 }
+
+.article-template__content ol li {
+  list-style: auto;
+}
