--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -61,7 +61,8 @@
 
 @media screen and (min-width: 750px) {
   .article-template header {
-    margin-top: 5rem;
+    padding-top: 2rem;
+    margin-top: 0;
   }
 }
 
@@ -205,4 +206,50 @@ h1.article-template__title {
 
 .article-template__content ol li {
   list-style: auto;
+}
+
+.article-header {
+  text-align: center;
+  padding: 10vh 1rem;
+  position: relative;
+}
+
+.article-header:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, .4);
+}
+
+.article-header .page-width {
+  position: relative;
+  z-index: 3;
+  color: #fff;
+}
+
+.article-header a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: lft-etica-mono, sans-serif !important;
+  font-size: 1.3rem;
+}
+
+.share-button details {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.share-button__button {
+  color: #fff;
+}
+
+h1.article-template__title {
+  color: #fff;
+  line-height: 1.3;
+  margin-bottom: 3rem !important;
 }
