--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -1,4 +1,6 @@
 {{ 'section-blog-post.css' | asset_url | stylesheet_tag }}
+{{ 'simple-grid.min.css' | asset_url | stylesheet_tag }}
+
 
 <article class="article-template" itemscope itemtype="http://schema.org/BlogPosting">
   {%- for block in section.blocks -%}
