revisions to blog landing page
Former-commit-id: dc730438928722a975101f56777ce19352cf00eb
Former-commit-id: 9bbd32c91f3a0f7cce76877919246ebce473051b

--- a/assets/component-article-card.css
+++ b/assets/component-article-card.css
@@ -48,6 +48,7 @@
 
 .article-card .card__heading {
   margin-bottom: 0.6rem;
+  line-height: 1.1;
 }
 
 .blog-articles .article-card .card__information,
