--- a/sections/research-blog.liquid
+++ b/sections/research-blog.liquid
@@ -2,41 +2,48 @@
 {{ 'component-card.css' | asset_url | stylesheet_tag }}
 {{ 'section-main-blog.css' | asset_url | stylesheet_tag }}
 
-{%- style -%}
-  .section-{{ section.id }}-padding {
-    padding-top: {{ section.settings.padding_top | times: 0.75 | round: 0 }}px;
-    padding-bottom: {{ section.settings.padding_bottom | times: 0.75 | round: 0 }}px;
-  }
+<style>
+    @media (max-width: 990px) {
 
-  @media screen and (min-width: 750px) {
-    .section-{{ section.id }}-padding {
-      padding-top: {{ section.settings.padding_top }}px;
-      padding-bottom: {{ section.settings.padding_bottom }}px;
+        .navBG.sticky {
+            position: relative !important;
+        }
     }
-  }
-{%- endstyle -%}
-
-<div class="navbar-inner">
-  <div class="container">
-
-      <div class="navbar-center-wrapper">
-      <div class="navbar-collapse collapse"><ul id="menu-header-menu-1" class="nav"><li id="mgt-menu-item-613" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Blog Home" href="/blogs/wavelength/">Blog Home</a></li><li id="mgt-menu-item-613" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="What’s New" href="/blogs/wavelength/tagged/whats-new">What’s New</a></li><li id="mgt-menu-item-612" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Sauna Science" href="/blogs/wavelength/tagged/sauna-science/">Sauna Science</a></li><li id="mgt-menu-item-472" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Products" href="/blogs/wavelength/tagged/products/">Products</a></li><li id="mgt-menu-item-611" class="menu-item menu-item-type-taxonomy menu-item-object-category"><a title="Lifestyle" href="/blogs/wavelength/tagged/lifestyle/">Lifestyle</a></li></ul></div>                  </div>
-
-  </div>
+</style>
+<div class="generic-headerBG gh-short">
+    <div class="generic-header gh-short">
+        <div class="gh-text" id="theTop">
+            <h1>References</h1>
+        </div>
+    </div>
 </div>
+<section>
+    <div class="research-cols">
+        <div class="research-topics">
+            <label>Sort by:</label>
+            <input id="topi" type="radio" class="hiddenRadio" name="topicAuthor" value="Topic" checked onClick="sortBy(this.value)"><label class="inlineLabel" for="topi">Topic</label>
+            <input id="auth" type="radio" class="hiddenRadio" name="topicAuthor" value="Alpha"  onClick="sortBy(this.value)"><label class="inlineLabel" for="auth">Author (A - Z)</label>
+            <div class="topics" id="filterTopic">
 
-<div class="header-blog">
+            </div>
 
-  <p>Research Arvhice:</p>
+            {% render 'researchlinks' %}
 
-</div>
+            <div class="research-links" id="byTopic">
+                <a href="#theTop" class="back-to-top"></a>
+                {%- for tag in blog.all_tags -%}
+                    {% assign i = i | plus:1 %}
+                        <a href="#topic{{i}}" class="topicLink">{{ tag }}</a>{% unless forloop.last %} {% endunless %}
 
-{%- paginate blog.articles by 7 -%}
+                {%- endfor -%}
+            </div>
+        </div>
+        {%- paginate blog.articles by 7 -%}
   <div class="main-blog page-width section-{{ section.id }}-padding">
-    <div class="blog-articles {% if section.settings.layout == 'collage' %}blog-articles--collage{% endif %}">
+    <div class="blog-articles">
       {%- for article in blog.articles -%}
-        <div class="blog-articles__article article">
-          {%- render 'article-card',
+        <div class="research-link ">
+          {%- render 'research-card',
             article: article,
             media_height: section.settings.image_height,
             media_aspect_ratio: article.image.aspect_ratio,
@@ -48,12 +55,60 @@
         </div>
       {%- endfor -%}
     </div>
-
-    {%- if paginate.pages > 1 -%}
-      {%- render 'pagination', paginate: paginate -%}
-    {%- endif -%}
+    <div class="topics topics-alpha hideMe" id="filterAlpha">
+        <a href="#alphaA" class="topicLink topicLink-alpha">A</a>
+        <a href="#alphaB" class="topicLink topicLink-alpha">B</a>
+        <a href="#alphaC" class="topicLink topicLink-alpha">C</a>
+        <a href="#alphaD" class="topicLink topicLink-alpha">D</a>
+        <a href="#alphaE" class="topicLink topicLink-alpha">E</a>
+        <a href="#alphaF" class="topicLink topicLink-alpha">F</a>
+        <a href="#alphaG" class="topicLink topicLink-alpha">G</a>
+        <a href="#alphaH" class="topicLink topicLink-alpha">H</a>
+        <a href="#alphaI" class="topicLink topicLink-alpha">I</a>
+        <a href="#alphaJ" class="topicLink topicLink-alpha">J</a>
+        <a href="#alphaK" class="topicLink topicLink-alpha">K</a>
+        <a href="#alphaL" class="topicLink topicLink-alpha">L</a>
+        <a href="#alphaM" class="topicLink topicLink-alpha">M</a>
+        <a href="#alphaN" class="topicLink topicLink-alpha">N</a>
+        <a href="#alphaO" class="topicLink topicLink-alpha">O</a>
+        <a href="#alphaP" class="topicLink topicLink-alpha">P</a>
+        <a href="#alphaQ" class="topicLink topicLink-alpha">Q</a>
+        <a href="#alphaR" class="topicLink topicLink-alpha">R</a>
+        <a href="#alphaS" class="topicLink topicLink-alpha">S</a>
+        <a href="#alphaT" class="topicLink topicLink-alpha">T</a>
+        <a href="#alphaU" class="topicLink topicLink-alpha">U</a>            
+        <a href="#alphaV" class="topicLink topicLink-alpha">V</a>           
+        <a href="#alphaW" class="topicLink topicLink-alpha">W</a>           
+        <a href="#alphaX" class="topicLink topicLink-alpha">X</a>            
+        <a href="#alphaY" class="topicLink topicLink-alpha">Y</a>           
+        <a href="#alphaZ" class="topicLink topicLink-alpha">Z</a>
+    
+</div>
+</div>
   </div>
 {%- endpaginate -%}
+    </div>
+</section>
+
+
+
+
+
+
+
+<script>
+	function sortBy(s) {
+		$(".research-links").addClass("hideMe");
+		$(".topics").addClass("hideMe");
+		$("#by" + s).removeClass("hideMe");
+		$("#filter" + s).removeClass("hideMe");
+	}
+	
+	$(".topicLink").on("click",function() {
+		$(".topicLink").removeClass("topicLinkOn");
+		$(this).addClass("topicLinkOn");
+	});
+</script>
 
 {% schema %}
 {
