blog post template updates
Former-commit-id: 8d2667eb77b6a96c8339752058a71cd34b00b76c
Former-commit-id: fd7a25857540e887373ccc35b11e71d11ac6ffa1

--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -1,6 +1,7 @@
 {{ 'section-blog-post.css' | asset_url | stylesheet_tag }}
-{{ 'simple-grid.min.css' | asset_url | stylesheet_tag }}
-
+{{ 'headsup.css' | asset_url | stylesheet_tag }}
+{{ 'section-main-blog.css' | asset_url | stylesheet_tag }}
+{%- render 'blog-nav' -%}
 
 <article class="article-template" itemscope itemtype="http://schema.org/BlogPosting">
   {%- for block in section.blocks -%}
