--- a/sections/research-blog.liquid
+++ b/sections/research-blog.liquid
@@ -24,23 +24,48 @@
             <input id="topi" type="radio" class="hiddenRadio" name="topicAuthor" value="Topic" checked onClick="sortBy(this.value)"><label class="inlineLabel" for="topi">Topic</label>
             <input id="auth" type="radio" class="hiddenRadio" name="topicAuthor" value="Alpha"  onClick="sortBy(this.value)"><label class="inlineLabel" for="auth">Author (A - Z)</label>
             <div class="topics" id="filterTopic">
-
+                <div class="research-links" id="byTopic">
+                    <a href="#theTop" class="back-to-top"></a>
+                    {%- for tag in blog.all_tags -%}
+                        {% assign i = i | plus:1 %}
+                            <a href="#topic{{i}}" class="topicLink">{{ tag }}</a>{% unless forloop.last %} {% endunless %}
+    
+                    {%- endfor -%}
+                </div>
             </div>
-
-            {% render 'researchlinks' %}
-
-            <div class="research-links" id="byTopic">
-                <a href="#theTop" class="back-to-top"></a>
-                {%- for tag in blog.all_tags -%}
-                    {% assign i = i | plus:1 %}
-                        <a href="#topic{{i}}" class="topicLink">{{ tag }}</a>{% unless forloop.last %} {% endunless %}
-
-                {%- endfor -%}
-            </div>
+            <div class="topics topics-alpha hideMe" id="filterAlpha">
+                <a href="#alphaA" class="topicLink topicLink-alpha">A</a>
+                <a href="#alphaB" class="topicLink topicLink-alpha">B</a>
+                <a href="#alphaC" class="topicLink topicLink-alpha">C</a>
+                <a href="#alphaD" class="topicLink topicLink-alpha">D</a>
+                <a href="#alphaE" class="topicLink topicLink-alpha">E</a>
+                <a href="#alphaF" class="topicLink topicLink-alpha">F</a>
+                <a href="#alphaG" class="topicLink topicLink-alpha">G</a>
+                <a href="#alphaH" class="topicLink topicLink-alpha">H</a>
+                <a href="#alphaI" class="topicLink topicLink-alpha">I</a>
+                <a href="#alphaJ" class="topicLink topicLink-alpha">J</a>
+                <a href="#alphaK" class="topicLink topicLink-alpha">K</a>
+                <a href="#alphaL" class="topicLink topicLink-alpha">L</a>
+                <a href="#alphaM" class="topicLink topicLink-alpha">M</a>
+                <a href="#alphaN" class="topicLink topicLink-alpha">N</a>
+                <a href="#alphaO" class="topicLink topicLink-alpha">O</a>
+                <a href="#alphaP" class="topicLink topicLink-alpha">P</a>
+                <a href="#alphaQ" class="topicLink topicLink-alpha">Q</a>
+                <a href="#alphaR" class="topicLink topicLink-alpha">R</a>
+                <a href="#alphaS" class="topicLink topicLink-alpha">S</a>
+                <a href="#alphaT" class="topicLink topicLink-alpha">T</a>
+                <a href="#alphaU" class="topicLink topicLink-alpha">U</a>            
+                <a href="#alphaV" class="topicLink topicLink-alpha">V</a>           
+                <a href="#alphaW" class="topicLink topicLink-alpha">W</a>           
+                <a href="#alphaX" class="topicLink topicLink-alpha">X</a>            
+                <a href="#alphaY" class="topicLink topicLink-alpha">Y</a>           
+                <a href="#alphaZ" class="topicLink topicLink-alpha">Z</a>
+            
         </div>
-        {%- paginate blog.articles by 7 -%}
+        </div>
+
   <div class="main-blog page-width section-{{ section.id }}-padding">
-    <div class="blog-articles">
+    <div class="research-articles">
       {%- for article in blog.articles -%}
         <div class="research-link ">
           {%- render 'research-card',
@@ -86,13 +111,8 @@
 </div>
 </div>
   </div>
-{%- endpaginate -%}
     </div>
 </section>
-
-
-
-
 
 
 
