blog post template updates
Former-commit-id: 8c3b1b1803aa1f6190265263aef99c37f365be6e
Former-commit-id: 9137b387f5d51d82151d99faef5584a273a41fff

--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -20,7 +20,7 @@
        
   <header {{ block.shopify_attributes }}>
             <h1 class="article-template__title" itemprop="headline">{{ article.title | escape }}</h1>
-       
+            <p class="etica">Wondering how technology can work like nature? Learn the science behind infrared light and our unique ThermaLight® spectrum.</p>
               <span class="circle-divider caption-with-letter-spacing" itemprop="dateCreated pubdate datePublished">{{ article.published_at | time_tag: format: 'date' }}</span>
            
               <span class="caption-with-letter-spacing" itemprop="author" itemscope itemtype="http://schema.org/Person">
