--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -20,7 +20,10 @@
        
   <header {{ block.shopify_attributes }}>
             <h1 class="article-template__title" itemprop="headline">{{ article.title | escape }}</h1>
-            <p class="etica">Wondering how technology can work like nature? Learn the science behind infrared light and our unique ThermaLight® spectrum.</p>
+            {% if article.metafields.custom.eyebrow_statement == true %}
+              <p class="etica">{{ article.metafields.custom.eyebrow_statement }}</p>
+            {%- endif -%}
+            
               <span class="circle-divider caption-with-letter-spacing" itemprop="dateCreated pubdate datePublished">{{ article.published_at | time_tag: format: 'date' }}</span>
            
               <span class="caption-with-letter-spacing" itemprop="author" itemscope itemtype="http://schema.org/Person">
