eyebrow statement on single blog post
Former-commit-id: 034f36d21fd06468df7e03000398550a13adcbf5
Former-commit-id: cc4b6364d5a3d9073befc9178c5b88e560be167a
Former-commit-id: 12509e8ac8673f0b3200433e3d9301c52ecb5c02
Former-commit-id: f514ba47be50558345ea62832bb3f678962defc1
Former-commit-id: 8b4713d8a6c93a048fc2f095788e9be5ed07f511
Former-commit-id: 28cb64d23eedad7f993a521a09055f02c1dfd8c0

--- a/sections/main-article.liquid
+++ b/sections/main-article.liquid
@@ -20,7 +20,7 @@
        
   <header {{ block.shopify_attributes }}>
             <h1 class="article-template__title" itemprop="headline">{{ article.title | escape }}</h1>
-            {% if article.metafields.custom.eyebrow_statement == true %}
+            {% if article.metafields.custom.eyebrow_statement  != blank %}
               <p class="etica">{{ article.metafields.custom.eyebrow_statement }}</p>
             {%- endif -%}
             
