--- a/sections/contact-form.liquid
+++ b/sections/contact-form.liquid
@@ -14,83 +14,114 @@
   }
 {%- endstyle -%}
 
-<div class="color-{{ section.settings.color_scheme }} gradient">
-  <div class="contact page-width page-width--narrow section-{{ section.id }}-padding">
-    {%- if section.settings.heading != blank -%}
-      <h2 class="title title-wrapper--no-top-margin {{ section.settings.heading_size }}">{{ section.settings.heading | escape }}</h2>
-    {%- else -%}
-      <h2 class="visually-hidden">{{ 'templates.contact.form.title' | t }}</h2>
-    {%- endif -%}
-    {%- form 'contact', id: 'ContactForm', class: 'isolate' -%}
-      {%- if form.posted_successfully? -%}
-        <h2 class="form-status form-status-list form__message" tabindex="-1" autofocus>{% render 'icon-success' %} {{ 'templates.contact.form.post_success' | t }}</h2>
-      {%- elsif form.errors -%}
-        <div class="form__message">
-          <h2 class="form-status caption-large text-body" role="alert" tabindex="-1" autofocus>{% render 'icon-error' %} {{ 'templates.contact.form.error_heading' | t }}</h2>
-        </div>
-        <ul class="form-status-list caption-large" role="list">
-          <li>
-            <a href="#ContactForm-email" class="link">
-              {{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}
-            </a>
-          </li>
-        </ul>
-      {%- endif -%}
-      <div class="contact__fields">
-        <div class="field">
-          <input class="field__input" autocomplete="name" type="text" id="ContactForm-name" name="contact[{{ 'templates.contact.form.name' | t }}]" value="{% if form.name %}{{ form.name }}{% elsif customer %}{{ customer.name }}{% endif %}" placeholder="{{ 'templates.contact.form.name' | t }}">
-          <label class="field__label" for="ContactForm-name">{{ 'templates.contact.form.name' | t }}</label>
-        </div>
-        <div class="field field--with-error">
-          <input
-            autocomplete="email"
-            type="email"
-            id="ContactForm-email"
-            class="field__input"
-            name="contact[email]"
-            spellcheck="false"
-            autocapitalize="off"
-            value="{% if form.email %}{{ form.email }}{% elsif customer %}{{ customer.email }}{% endif %}"
-            aria-required="true"
-            {% if form.errors contains 'email' %}
-              aria-invalid="true"
-              aria-describedby="ContactForm-email-error"
-            {% endif %}
-            placeholder="{{ 'templates.contact.form.email' | t }}"
-          >
-          <label class="field__label" for="ContactForm-email">{{ 'templates.contact.form.email' | t }} <span aria-hidden="true">*</span></label>
-          {%- if form.errors contains 'email' -%}
-            <small class="contact__field-error" id="ContactForm-email-error">
-              <span class="visually-hidden">{{ 'accessibility.error' | t }}</span>
-              <span class="form__message">{% render 'icon-error' %}{{ form.errors.translated_fields['email'] | capitalize }} {{ form.errors.messages['email'] }}</span>
-            </small>
-          {%- endif -%}
-        </div>
-      </div>
-      <div class="field">
-        <input type="tel" id="ContactForm-phone" class="field__input" autocomplete="tel" name="contact[{{ 'templates.contact.form.phone' | t }}]" pattern="[0-9\-]*" value="{% if form.phone %}{{ form.phone }}{% elsif customer %}{{ customer.phone }}{% endif %}" placeholder="{{ 'templates.contact.form.phone' | t }}">
-        <label class="field__label" for="ContactForm-phone">{{ 'templates.contact.form.phone' | t }}</label>
-      </div>
-      <div class="field">
-        <textarea
-          rows="10"
-          id="ContactForm-body"
-          class="text-area field__input"
-          name="contact[{{ 'templates.contact.form.comment' | t }}]"
-          placeholder="{{ 'templates.contact.form.comment' | t }}"
-        >
-          {{- form.body -}}
-        </textarea>
-        <label class="form__label field__label" for="ContactForm-body">{{ 'templates.contact.form.comment' | t }}</label>
-      </div>
-      <div class="contact__button">
-        <button type="submit" class="button">
-          {{ 'templates.contact.form.send' | t }}
-        </button>
-      </div>
-    {%- endform -%}
+<div class="generic-headerBG">
+  <div class="generic-header">
+    <div class="gh-text">
+      <cms id='cms0'>
+<h1>Get in Touch</h1>
+</cms cms0>
+    </div>
   </div>
 </div>
+
+
+
+<section>
+<div class="contact-cols">
+  <div class="contact-col">
+    <img src="{{ 'contact-phone.svg' | asset_url }}" alt="" />
+    <div class="contact-col-head">Give us a call</div>
+    <p><a href="tel:15736672862">+1-573-667-2862</a></p>
+  </div>
+  <div class="contact-col">
+    <img src="{{ 'contact-email.svg' | asset_url }}" alt="" />
+    <div class="contact-col-head">Send us an email</div>
+    <p><a href="mailto:hello@sauna.space">hello@sauna.space</a></p>
+  </div>
+  <div class="contact-col">
+    <img src="{{ 'contact-chat.svg' | asset_url }}" alt="" />
+    <div class="contact-col-head">Chat with us</div>
+    <p><a href="javascript:void(0)" onclick="GorgiasChat.open()">Send us a message</a></p>
+  </div>
+</div>
+<cms id='cms1'>
+
+
+
+
+<p class="contact-cols-text">Our customer care team is normally available (CST) during:<br /> 
+	8am - 7pm, Monday<br /> 
+    6am - 7pm, Tuesday - Thursday<br /> 
+    6am - 5pm, Friday<br /> 
+</p>
+</cms cms1>
+</section>
+
+<div class="tanBG">
+<div class="contact-tiles">
+  <a onclick="GorgiasChat.open()" class="contact-tile">
+    <div class="ct-text">
+      <div class="ct-head">View Order Status</div>
+      <div class="ct-link arrow-link">Manage your order</div>
+    </div>
+  </a>
+  <a href="/pages/shipping-and-returns" class="contact-tile">
+    <div class="ct-text">
+      <div class="ct-head">Returns & Exchanges</div>
+      <div class="ct-link arrow-link">View our policy</div>
+    </div>
+  </a>
+  <a href="/pages/warranty" class="contact-tile">
+    <div class="ct-text">
+      <div class="ct-head">Warranty</div>
+      <div class="ct-link arrow-link">View our policy</div>
+    </div>
+  </a>
+  <a href="https://help.sauna.space/" class="contact-tile ct-faq">
+    <div class="ct-text">
+      <div class="ct-head">Have a question?</div>
+      <div class="ct-link arrow-link arrow-link-white">View our FAQ</div>
+    </div>
+  </a>
+</div>
+</div>
+
+<div class="oc2 oc2-reverse" style="background-image: url({{ 'contact-stopBy.jpg' | asset_url }}); background-size: 55%;">
+  <div class="oc-text oc-text-contact">
+    <cms id='cms2'>
+    <h2 class="alignLeft">Stop by for a visit.</h2>
+    <p>Want to see the SaunaSpace magic for yourself? Our Retail Store in Columbia, MO, is open for showroom demonstrations and local pickup.</p>
+    <p class="etica geo-pin">905 Clinkscales Rd, Columbia, MO 65203, USA</p>
+    </cms cms2>
+  </div>
+</div>
+
+<div class="tanBG noMargin">
+<cms id='cms3'>
+<h2 class="h2Margin">Be a Part of Something Great</h2>
+</cms cms3>
+<section>
+  <div class="two-cols two-cols-narrow">
+    <div class="col col-bordered col-bordered-center">
+      <cms id='cms4'>
+<h3>Join the SaunaSpace team</h3>
+<p>We take our employees’ happiness as seriously as our customers’ wellbeing. Learn what it means to be part of a hardworking, imaginative team.</p>
+<a href="/pages/careers">View Openings</a>
+</cms cms4>
+    </div>
+    <div class="col col-bordered col-bordered-center">
+      <cms id='cms5'>
+      <h3>Become an affiliate partner</h3>
+      <p>Bring the healing power of near infrared light sauna therapy to your family, friends, and connections.</p>
+      <a href="https://affiliate.sauna.space">Apply Now</a>
+      </cms cms5>
+    </div>
+  </div>
+
+</section>
+
+</div>
+
 
 {% schema %}
 {
